ignore tensorboard log files

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,25 @@ CheXpert-v1.0-small.zip
 *.csv
 *.jpg
 *.h5
+logs/fit/train/train/events.out.tfevents.1621423310.192.168.1.8.93827.240893.v2
+logs/fit/train/train/events.out.tfevents.1621423349.192.168.1.8.profile-empty
+logs/fit/train/train/events.out.tfevents.1621424258.192.168.1.8.93827.364397.v2
+logs/fit/train/train/plugins/profile/2021_05_19_14_22_29/192.168.1.8.input_pipeline.pb
+logs/fit/train/train/plugins/profile/2021_05_19_14_22_29/192.168.1.8.kernel_stats.pb
+logs/fit/train/train/plugins/profile/2021_05_19_14_22_29/192.168.1.8.memory_profile.json.gz
+logs/fit/train/train/plugins/profile/2021_05_19_14_22_29/192.168.1.8.overview_page.pb
+logs/fit/train/train/plugins/profile/2021_05_19_14_22_29/192.168.1.8.tensorflow_stats.pb
+logs/fit/train/train/plugins/profile/2021_05_19_14_38_13/192.168.1.8.kernel_stats.pb
+logs/fit/train/train/plugins/profile/2021_05_19_14_38_13/192.168.1.8.input_pipeline.pb
+logs/fit/train/train/plugins/profile/2021_05_19_14_22_29/192.168.1.8.xplane.pb
+logs/fit/train/train/plugins/profile/2021_05_19_14_22_29/192.168.1.8.trace.json.gz
+logs/fit/train/train/plugins/profile/2021_05_19_14_38_13/192.168.1.8.memory_profile.json.gz
+logs/fit/train/train/plugins/profile/2021_05_19_14_38_13/192.168.1.8.trace.json.gz
+logs/fit/train/train/plugins/profile/2021_05_19_14_38_13/192.168.1.8.tensorflow_stats.pb
+logs/fit/train/train/plugins/profile/2021_05_19_14_38_13/192.168.1.8.overview_page.pb
+logs/fit/train/train/plugins/profile/2021_05_19_14_38_13/192.168.1.8.xplane.pb
+logs/fit/train/validation/events.out.tfevents.1621423397.192.168.1.8.93827.251147.v2
+logs/fit/train/validation/events.out.tfevents.1621424380.192.168.1.8.93827.374889.v2
+*.v2
+*.gz
+*.v2
